[gd_scene load_steps=2 format=3 uid="uid://bh825e1xcy0ip"]

[ext_resource type="Script" path="res://src/scripts/pause_menu.gd" id="1_qdtf3"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qdtf3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -195.5
offset_right = 195.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="SpacerTop" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="PauseTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="PauseContinue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"MainMenuButton"
text = "Continue"

[node name="PauseOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"MainMenuButton"
text = "Options"

[node name="PauseQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"MainMenuButton"
text = "Main Menu"

[node name="SpacerBottom" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="VBoxContainer/PauseContinue" to="." method="_on_pause_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/PauseOptions" to="." method="_on_pause_options_pressed"]
[connection signal="pressed" from="VBoxContainer/PauseQuit" to="." method="_on_pause_quit_pressed"]
